--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
 <body>
 <title> This is a Git</title>
-<h1>Git is a version system</h2>
+<h1>Git is a version system control</h2>
 </head>
 </body>
